@@ -59,7 +59,6 @@ public class Config {
     public int sellPrice = -1;
     public int buyPrice = -1;
 
-    public boolean lockDrops = true;
     public int dropTicks = 6000;
 
     public int inactivityTime = 30;
@@ -67,7 +66,7 @@ public class Config {
 
     public boolean log;
 
-    public int configVersion = 1;
+    public int configVersion = 2;
     public int preConfigVersion;
 
     public Map<String, Map<ClaimPermission, Boolean>> defaultGroups = createHashMap(map -> {
@@ -87,12 +86,13 @@ public class Config {
         }));
     });
 
-    private final Map<String, Map<ClaimPermission, GlobalType>> globalDefaultPerms = createHashMap(map -> map.put("*", createHashMap(perms -> {
+    protected final Map<String, Map<ClaimPermission, GlobalType>> globalDefaultPerms = createHashMap(map -> map.put("*", createHashMap(perms -> {
         perms.put(PermissionRegistry.FLIGHT, GlobalType.ALLTRUE);
         perms.put(PermissionRegistry.MOBSPAWN, GlobalType.ALLFALSE);
         perms.put(PermissionRegistry.TELEPORT, GlobalType.ALLFALSE);
         perms.put(PermissionRegistry.NOHUNGER, GlobalType.ALLFALSE);
         perms.put(PermissionRegistry.EDITPOTIONS, GlobalType.ALLFALSE);
+        perms.put(PermissionRegistry.LOCKITEMS, GlobalType.ALLTRUE);
     })));
 
     public Config(MinecraftServer server) {
@@ -178,7 +178,6 @@ public class Config {
             this.permissionLevel = ConfigHandler.fromJson(obj, "permissionLevel", this.permissionLevel);
             this.sellPrice = ConfigHandler.fromJson(obj, "sellPrice", this.sellPrice);
             this.buyPrice = ConfigHandler.fromJson(obj, "buyPrice", this.buyPrice);
-            this.lockDrops = ConfigHandler.fromJson(obj, "lockDrops", this.lockDrops);
             this.dropTicks = ConfigHandler.fromJson(obj, "dropTicks", this.dropTicks);
             this.inactivityTime = ConfigHandler.fromJson(obj, "inactivityTimeDays", this.inactivityTime);
             this.inactivityBlocksMax = ConfigHandler.fromJson(obj, "inactivityBlocksMax", this.inactivityBlocksMax);
@@ -238,7 +237,6 @@ public class Config {
         obj.addProperty("enableLogs", this.log);
         obj.addProperty("sellPrice", this.sellPrice);
         obj.addProperty("buyPrice", this.buyPrice);
-        obj.addProperty("lockDrops", this.lockDrops);
         obj.addProperty("dropTicks", this.dropTicks);
         obj.addProperty("inactivityTimeDays", this.inactivityTime);
         obj.addProperty("inactivityBlocksMax", this.inactivityBlocksMax);
