@@ -1,13 +1,24 @@
 package io.github.flemmli97.flan.config;
 
-import io.github.flemmli97.flan.claim.Claim;
+import io.github.flemmli97.flan.Flan;
+import io.github.flemmli97.flan.api.permission.PermissionRegistry;
 
 import java.util.Map;
 
 public class ConfigUpdater {
 
     private static final Map<Integer, Updater> updater = Config.createHashMap(map -> {
-
+        map.put(2, () -> {
+            Flan.debug("Updating config to version 2");
+            ConfigHandler.config.globalDefaultPerms.compute("*", (k, v) -> {
+                if (v == null) {
+                    return Config.createHashMap(map1 -> map1.put(PermissionRegistry.LOCKITEMS, Config.GlobalType.ALLTRUE));
+                } else {
+                    v.put(PermissionRegistry.LOCKITEMS, Config.GlobalType.ALLTRUE);
+                    return v;
+                }
+            });
+        });
     });
 
     public static void updateConfig(int preVersion) {
@@ -15,16 +26,9 @@ public class ConfigUpdater {
                 .forEach(Updater::configUpdater);
     }
 
-    public static void updateClaim(Claim claim) {
-        updater.entrySet().stream().filter(e -> e.getKey() > ConfigHandler.config.preConfigVersion).map(Map.Entry::getValue)
-                .forEach(up -> up.claimUpdater(claim));
-    }
-
     interface Updater {
 
         void configUpdater();
-
-        void claimUpdater(Claim claim);
 
     }
 }
