@@ -223,7 +223,7 @@ public class EntityInteractEvents {
         if (player instanceof ServerPlayerEntity sPlayer) {
             if (entity instanceof ItemEntity) {
                 IOwnedItem ownedItem = (IOwnedItem) entity;
-                if (ownedItem.getDeathPlayer() != null && ConfigHandler.config.lockDrops) {
+                if (ownedItem.getDeathPlayer() != null) {
                     ServerPlayerEntity other = sPlayer.getServer().getPlayerManager().getPlayer(ownedItem.getDeathPlayer());
                     if (other == null)
                         return false;
